[package]
name = "mattyb"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
clap = { version = "4.6", features = ["derive"] }
log = "0.4.29"
rustls-acme = { version = "0.15.1", features = ["axum"] }
simple_logger = "5.2.0"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = "0.1.18"
